{
  "version": 4,
  "terraform_version": "0.12.0",
  "serial": 107,
  "lineage": "925d335e-9ff0-249e-4aba-79207d6eebbd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "example",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test-ivy",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-00648b2bde6693dfa",
            "owner_id": "198098511860",
            "tags": {
              "Name": "test-ivy"
            },
            "vpc_id": "vpc-0b9b5187344e20350"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test-ivy",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:198098511860:loadbalancer/app/test-ivy/75a8d65c641271e0",
            "arn_suffix": "app/test-ivy/75a8d65c641271e0",
            "dns_name": "test-ivy-61509284.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:198098511860:loadbalancer/app/test-ivy/75a8d65c641271e0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-ivy",
            "security_groups": [
              "sg-01b7b336570e91389",
              "sg-0bdcf5b8556f99ee1",
              "sg-0ed5fafa90dba2be6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01784e6a3704e06de"
              },
              {
                "subnet_id": "subnet-03d8ca47734132fb9"
              },
              {
                "subnet_id": "subnet-0c0e61954b63b6461"
              }
            ],
            "subnets": [
              "subnet-01784e6a3704e06de",
              "subnet-03d8ca47734132fb9",
              "subnet-0c0e61954b63b6461"
            ],
            "vpc_id": "vpc-0b9b5187344e20350",
            "zone_id": "Z14GRHDCWA56QT"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "redirect_http_to_https",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "test-ivy",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "test-ivy",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "test-ivy",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test-ivy",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "az1",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "az2",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "az3",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.https_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test-ivy",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:security-group/sg-0bdcf5b8556f99ee1",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0bdcf5b8556f99ee1",
            "ingress": [],
            "name": "https-sg",
            "name_prefix": null,
            "owner_id": "198098511860",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0b9b5187344e20350"
          }
        }
      ]
    },
    {
      "module": "module.http_redirect_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test-ivy",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:security-group/sg-01b7b336570e91389",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-01b7b336570e91389",
            "ingress": [],
            "name": "http-redirect-sg",
            "name_prefix": null,
            "owner_id": "198098511860",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0b9b5187344e20350"
          }
        }
      ]
    },
    {
      "module": "module.http_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test-ivy",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:security-group/sg-0ed5fafa90dba2be6",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ed5fafa90dba2be6",
            "ingress": [],
            "name": "http-sg",
            "name_prefix": null,
            "owner_id": "198098511860",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0b9b5187344e20350"
          }
        }
      ]
    },
    {
      "module": "module.https_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.http_redirect_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.http_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.https_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.http_redirect_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.http_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "az1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:subnet/subnet-01784e6a3704e06de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-01784e6a3704e06de",
            "map_public_ip_on_launch": true,
            "owner_id": "198098511860",
            "tags": {
              "Name": "test-ivy-1a"
            },
            "vpc_id": "vpc-0b9b5187344e20350"
          },
          "depends_on": [
            "aws_vpc.test-ivy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "az2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:subnet/subnet-0c0e61954b63b6461",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.10.2.0/24",
            "id": "subnet-0c0e61954b63b6461",
            "map_public_ip_on_launch": true,
            "owner_id": "198098511860",
            "tags": {
              "Name": "test-ivy-1c"
            },
            "vpc_id": "vpc-0b9b5187344e20350"
          },
          "depends_on": [
            "aws_vpc.test-ivy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "az3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:subnet/subnet-03d8ca47734132fb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.10.3.0/24",
            "id": "subnet-03d8ca47734132fb9",
            "map_public_ip_on_launch": true,
            "owner_id": "198098511860",
            "tags": {
              "Name": "test-ivy-1d"
            },
            "vpc_id": "vpc-0b9b5187344e20350"
          },
          "depends_on": [
            "aws_vpc.test-ivy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test-ivy",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:vpc/vpc-0b9b5187344e20350",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-02abf92fb5003678f",
            "default_route_table_id": "rtb-0afbf5a5dba58a7cc",
            "default_security_group_id": "sg-02329722a566d95fa",
            "dhcp_options_id": "dopt-3233cf55",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b9b5187344e20350",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0afbf5a5dba58a7cc",
            "owner_id": "198098511860",
            "tags": {
              "Name": "test-ivy"
            }
          }
        }
      ]
    }
  ]
}